# spd

./: Cargo.toml  LICENSE  README.md
demo/: demo.spd  index.html
res/: index.html
src/: asset.rs  document.rs  fileio.rs  lib.rs  reader.rs  writer.rs
tests/: basic.rs
