[package]
name = "spd"
version = "0.1.0"
authors = ["tobischw <tschwei@siue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
flate2 = "1.0.14"